hphp/test/quick/vector-clscns.php.expectf
HipHop Fatal error: Couldn't find constant c::BAR in %s/test/quick/vector-clscns.php on line 8
